Started basic scaffolding

--- a/index.html
+++ b/index.html
@@ -4,12 +4,71 @@
 	<meta charset="UTF-8">
 	<title>Razweare - High Quality Tutorials</title>
 	<link href='https://fonts.googleapis.com/css?family=Bitter:400,400italic,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="styles/css/styles.css">
 </head>
 <body>
-	
-	<h1>Razeware</h1>
 
-	<script src="scripts.js"></script>
+	<!-- Header -->
+	<header class="wrap">
+		<a href="#"><img id="logo" src="img/logo-icon.png" alt="Razeware"></a>
+		<nav id="navPrimary">
+			<a href="#">Services</a>
+			<a href="#">RWDevCon</a>
+			<a href="#">Team</a>
+		</nav>
+		<a id="btnContact" href="#" class="button">Contact Us</a>
+	</header>
+
+	<!-- Hero Banner -->
+	<section id="hero">
+		<div class="wrap">
+			<p>(header)</p>
+		</div>
+	</section>
+
+	<!-- Services -->
+	<section id="services" class="wrap">
+		<!-- Intro Text -->
+		<div id="introServices">
+			<h2>Our Services</h2>
+			<p>We provide tutorials and other learning aids in the format that works best for you. Whether that's high quality tutorials, video series, published books, or even regular podcasts! Our content library is massive. The stats below speak for themselves.</p>
+			<!-- Stats -->
+			<ul id="stats">
+				<li><strong>1.2K</strong> Tutorials</li>
+				<li><strong>500+</strong> Videos</li>
+				<li><strong>78K+</strong> Newsletter Subs</li>
+				<li><strong>12</strong> Books</li>
+			</ul>
+		</div>
+		<!-- Service Cells -->
+		<div id="serviceCells">
+			(cells here)
+		</div>
+	</section>
+
+	<!-- Conference Call Out -->
+	<section id="conference">
+		<div class="wrap">
+			<p>(conference)</p>
+		</div>
+	</section>
+
+	<!-- Team -->
+	<section id="team" class="wrap">
+		<div id="introTeam">
+			<h2>We are Razeware</h2>
+			<p>Meet the Razeware team.</p>
+			<p>(TEAM LIST HERE)</p>
+		</div>
+	</section>
+
+	<!-- Footer -->
+	<footer>
+		<div class="wrap">
+			<p>(footer)</p>
+		</div>
+	</footer>
+
+	<script src="scripts/scripts.js"></script>
 </body>
 </html>
