--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 </head>
 <body>
 
+	<a id="#top" target="#top"></a>
+
 	<!-- Header -->
-	<header class="wrap">
-		<a href="#"><img id="logo" src="img/logo-icon.png" alt="Razeware"></a>
-		<nav id="navPrimary">
-			<a href="#">Services</a>
-			<a href="#">RWDevCon</a>
-			<a href="#">Team</a>
-		</nav>
-		<a id="btnContact" href="#" class="button">Contact Us</a>
+	<header>
+		<div class="wrap">
+			<a href="#top"><img id="logo" src="img/logo-icon.png" alt="Razeware"></a>
+			<nav id="navPrimary">
+				<a href="#services">Services</a>
+				<a href="#conference">RWDevCon</a>
+				<a href="#team">Team</a>
+			</nav>
+			<a id="btnContact" href="#contact" class="button">Contact Us</a>
+		</div>
 	</header>
 
 	<!-- Hero Banner -->
@@ -27,12 +31,11 @@
 	</section>
 
 	<!-- Services -->
+	<a id="#services" target="#services"></a>
 	<section id="services" class="wrap">
-		<!-- Intro Text -->
 		<div id="introServices">
 			<h2>Our Services</h2>
 			<p>We provide tutorials and other learning aids in the format that works best for you. Whether that's high quality tutorials, video series, published books, or even regular podcasts! Our content library is massive. The stats below speak for themselves.</p>
-			<!-- Stats -->
 			<ul id="stats">
 				<li><strong>1.2K</strong> Tutorials</li>
 				<li><strong>500+</strong> Videos</li>
@@ -40,13 +43,16 @@
 				<li><strong>12</strong> Books</li>
 			</ul>
 		</div>
-		<!-- Service Cells -->
-		<div id="serviceCells">
-			(cells here)
+		<div id="cells">
+			<div id="tutorials" class="cell">tutorials</div>
+			<div id="videos" class="cell">videos</div>
+			<div id="books" class="cell">books</div>
+			<div id="podcasts" class="cell">podcasts</div>
 		</div>
 	</section>
 
 	<!-- Conference Call Out -->
+	<a id="#conference" target="#conference"></a>
 	<section id="conference">
 		<div class="wrap">
 			<p>(conference)</p>
@@ -54,15 +60,25 @@
 	</section>
 
 	<!-- Team -->
+	<a id="#team" target="#team"></a>
 	<section id="team" class="wrap">
 		<div id="introTeam">
 			<h2>We are Razeware</h2>
 			<p>Meet the Razeware team.</p>
-			<p>(TEAM LIST HERE)</p>
+			<ul id="teamGallery">
+				<li><img src="img/team/ray.png" alt="ray"><span>Ray Wenderlich</span></li>
+				<li><img src="img/team/vicki.png" alt="vicki"><span>Vicki Wenderlich</span></li>
+				<li><img src="img/team/mic.jpeg" alt="mic"><span>Mic Pringle</span></li>
+				<li><img src="img/team/sam.jpeg" alt="sam"><span>Sam Davies</span></li>
+				<li><img src="img/team/brian.jpeg" alt="brian"><span>Brian Moakley</span></li>
+				<li><img src="img/team/christine.jpeg" alt="christine"><span>Christine Sweigart</span></li>
+				<li><img src="img/team/bill.png" alt="bill"><span>Bill Murray</span></li>
+			</ul>
 		</div>
 	</section>
 
 	<!-- Footer -->
+	<a id="#contact" target="#contact"></a>
 	<footer>
 		<div class="wrap">
 			<p>(footer)</p>
