Updated scroll script to latest version, team animation effect

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!-- Header -->
 	<header>
 		<div class="wrap">
-			<a href="#top"><img id="logo" src="img/logo-icon.png" alt="Razeware"></a>
+			<a href="#top" title="Return to top."><img id="logo" src="img/logo-icon.png" alt="Razeware"></a>
 			<nav id="navPrimary">
 				<a href="#services">Services</a>
 				<a href="#conference">RWDevCon</a>
@@ -65,15 +65,36 @@
 		<div id="introTeam">
 			<h2>We are Razeware</h2>
 			<p>Meet the Razeware team.</p>
-			<ul id="teamGallery">
-				<li><img src="img/team/ray.png" alt="ray"><span>Ray Wenderlich</span></li>
-				<li><img src="img/team/vicki.png" alt="vicki"><span>Vicki Wenderlich</span></li>
-				<li><img src="img/team/mic.jpeg" alt="mic"><span>Mic Pringle</span></li>
-				<li><img src="img/team/sam.jpeg" alt="sam"><span>Sam Davies</span></li>
-				<li><img src="img/team/brian.jpeg" alt="brian"><span>Brian Moakley</span></li>
-				<li><img src="img/team/christine.jpeg" alt="christine"><span>Christine Sweigart</span></li>
-				<li><img src="img/team/bill.png" alt="bill"><span>Bill Murray</span></li>
-			</ul>
+			<nav id="teamGallery">
+				<a href="#" target="_blank">
+					<div><img src="img/team/ray.png" alt="ray"></div>
+					Ray Wenderlich
+				</a>
+				<a href="#" target="_blank">
+					<div><img src="img/team/vicki.png" alt="vicki"></div>
+					Vicki Wenderlich
+				</a>
+				<a href="https://www.raywenderlich.com/u/micpringle" target="_blank">
+					<div><img src="img/team/mic.jpeg" alt="mic"></div>
+					Mic Pringle
+				</a>
+				<a href="#" target="_blank">
+					<div><img src="img/team/sam.jpeg" alt="sam"></div>
+					Sam Davies
+				</a>
+				<a href="#" target="_blank">
+					<div><img src="img/team/brian.jpeg" alt="brian"></div>
+					Brian Moakley
+				</a>
+				<a href="#" target="_blank">
+					<div><img src="img/team/christine.jpeg" alt="christine"></div>
+					Christine Sweigart
+				</a>
+				<a href="#" target="_blank">
+					<div><img src="img/team/bill.png" alt="bill"></div>
+					Bill Murray
+				</a>
+			</nav>
 		</div>
 	</section>
 
