Fixed issue with smooth scroll

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
 
-	<a id="#top" target="#top"></a>
+	<a id="top" name="top"></a>
 
 	<!-- Header -->
 	<header>
 		<div class="wrap">
-			<a href="#top" title="Return to top."><img id="logo" src="img/logo-icon.png" alt="Razeware"></a>
+			<a data-scroll href="#top" title="Return to top."><img id="logo" src="img/logo-icon.png" alt="Razeware"></a>
 			<nav id="navPrimary">
-				<a href="#services">Services</a>
-				<a href="#conference">RWDevCon</a>
-				<a href="#team">Team</a>
+				<a data-scroll href="#services">Services</a>
+				<a data-scroll href="#conference">RWDevCon</a>
+				<a data-scroll href="#team">Team</a>
 			</nav>
-			<a id="btnContact" href="#contact" class="button">Contact Us</a>
+			<a id="btnContact" data-scroll href="#contact" class="button">Contact Us</a>
 		</div>
 	</header>
 
@@ -31,7 +31,7 @@
 	</section>
 
 	<!-- Services -->
-	<a id="#services" target="#services"></a>
+	<a id="services" name="services"></a>
 	<section id="services" class="wrap">
 		<div id="introServices">
 			<h2>Our Services</h2>
@@ -52,7 +52,7 @@
 	</section>
 
 	<!-- Conference Call Out -->
-	<a id="#conference" target="#conference"></a>
+	<a id="conference" name="conference"></a>
 	<section id="conference">
 		<div class="wrap">
 			<p>(conference)</p>
@@ -60,7 +60,7 @@
 	</section>
 
 	<!-- Team -->
-	<a id="#team" target="#team"></a>
+	<a id="team" name="team"></a>
 	<section id="team" class="wrap">
 		<div id="introTeam">
 			<h2>We are Razeware</h2>
@@ -99,7 +99,7 @@
 	</section>
 
 	<!-- Footer -->
-	<a id="#contact" target="#contact"></a>
+	<a id="contact" name="contact"></a>
 	<footer>
 		<div class="wrap">
 			<p>(footer)</p>
