Hero and conference banners nearly complete

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 	<!-- Hero Banner -->
 	<section id="hero">
 		<div class="wrap">
-			<p>(header)</p>
+			<img id="logo" src="img/logo-icon.png" alt="Razeware">
+			<h1>Welcome to <strong>Razeware.</strong></h1>
+			<p>Razeware is the most popular iOS developement site on the<br>Internet, full of high quality tutorials for various skills sets.</p>
+			<a href="#" class="button btnBigGreen">Get Our Newsletter</a>
 		</div>
 	</section>
 
@@ -55,7 +58,11 @@
 	<a id="conference" name="conference"></a>
 	<section id="conference">
 		<div class="wrap">
-			<p>(conference)</p>
+			<div id="confText">
+				<h2>RWDevCon</h2>
+				<h4>The Tutorial Conference</h4>
+				<a href="http://www.rwdevcon.com/" class="button btnBigGreen" target="_blank">Sign Up Now</a>
+			</div>
 		</div>
 	</section>
 
