Various bugs and responsive break point fixes

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
 				<a data-scroll href="#team">Team</a>
 			</nav>
 			<a id="btnContact" data-scroll href="#contact" class="button">Contact Us</a>
-			<span id="hamburgerMenu" onclick="toggleMobileMenu()">
-				<img src="img/icon-hamburger.png" alt="Open Menu">
-			</span>
+			<img id="hamburgerMenu" src="img/icon-hamburger.png" alt="Open Menu" onclick="toggleMobileMenu()">
 		</div>
 	</header>
 
@@ -48,7 +46,7 @@
 			<img id="logo" src="img/logo-icon.png" alt="Razeware">
 			<h1>Welcome to <strong>Razeware.</strong></h1>
 			<p>Razeware is the most popular iOS developement site on the <br>Internet, full of high quality tutorials for various skills sets.</p>
-			<a href="#" class="button btnBigGreen">Get Our Newsletter</a>
+			<a href="https://www.raywenderlich.com/newsletter" class="button btnBigGreen" target="_blank">Get Our Newsletter</a>
 		</div>
 	</section>
 
@@ -65,11 +63,10 @@
 				<li><strong>12</strong> Books</li>
 			</ul>
 		</div>
-
 		<div id="cells">
 			<div class="cell">
 				<div id="tutorials" class="cellInner">
-					<div><img src="img/service-tutorials.png" alt="Tutorials"></div>
+					<div class="animZoom"><img src="img/service-tutorials.png" alt="Tutorials"></div>
 					<h2>Tutorials</h2>
 					<p>Browse over 1,200 high quality written tutorials, including an extensive catalog for learning iOS developement.</p>
 					<a href="https://www.raywenderlich.com/" class="button">View Now</a>
@@ -77,7 +74,7 @@
 			</div>
 			<div class="cell">
 				<div id="videos" class="cellInner">
-					<div><img src="img/service-videos.png" alt="Videos"></div>
+					<div class="animZoom"><img src="img/service-videos.png" alt="Videos"></div>
 					<h2>Videos</h2>
 					<p>Prefer to watch and learn? Check out any of our 500+ videos, across more than 50 video tutorials series.</p>
 					<a href="https://www.raywenderlich.com/video-tutorials" class="button">View Now</a>
@@ -85,7 +82,7 @@
 			</div>
 			<div class="cell">
 				<div id="books" class="cellInner">
-					<div><img src="img/service-books.png" alt="Books"></div>
+					<div class="animZoom"><img src="img/service-books.png" alt="Books"></div>
 					<h2>Books</h2>
 					<p>Learn how to make awesome apps from the ground up, with our published series of epic-length books!</p>
 					<a href="https://www.raywenderlich.com/store" class="button">View Now</a>
@@ -93,9 +90,9 @@
 			</div>
 			<div class="cell">
 				<div id="podcasts" class="cellInner">
-					<div><img src="img/service-podcasts.png" alt="Podcasts"></div>
+					<div class="animZoom"><img src="img/service-podcasts.png" alt="Podcasts"></div>
 					<h2>Podcasts</h2>
-					<p>Join Mic and Jake as they discuss every aspect of app dev with well-known characters from the developer community.</p>
+					<p>Join Mic and Jake as they discuss aspects of app dev with well-known characters from the community.</p>
 					<a href="https://www.raywenderlich.com/rwpodcast" class="button">View Now</a>
 				</div>
 			</div>
@@ -124,31 +121,45 @@
 			<p>Meet the Razeware team.</p>
 			<nav id="teamGallery">
 				<a href="https://www.raywenderlich.com/u/rwenderlich" target="_blank">
-					<div><img src="img/team/ray.png" alt="ray"></div>
+					<div class="rounded">
+						<div class="animZoom"><img src="img/team/ray.png" alt="ray"></div>
+					</div>
 					Ray Wenderlich
 				</a>
 				<a href="https://www.raywenderlich.com/u/vwenderlich" target="_blank">
-					<div><img src="img/team/vicki.png" alt="vicki"></div>
+					<div class="rounded">
+						<div class="animZoom"><img src="img/team/vicki.png" alt="vicki"></div>
+					</div>
 					Vicki Wenderlich
 				</a>
 				<a href="https://www.raywenderlich.com/u/micpringle" target="_blank">
-					<div><img src="img/team/mic.jpeg" alt="mic"></div>
+					<div class="rounded">
+						<div class="animZoom"><img src="img/team/mic.jpeg" alt="mic"></div>
+					</div>
 					Mic Pringle
 				</a>
 				<a href="https://www.raywenderlich.com/u/samdavies" target="_blank">
-					<div><img src="img/team/sam.jpeg" alt="sam"></div>
+					<div class="rounded">
+						<div class="animZoom"><img src="img/team/sam.jpeg" alt="sam"></div>
+					</div>
 					Sam Davies
 				</a>
 				<a href="https://www.raywenderlich.com/u/vegetarianzombie" target="_blank">
-					<div><img src="img/team/brian.jpeg" alt="brian"></div>
+					<div class="rounded">
+						<div class="animZoom"><img src="img/team/brian.jpeg" alt="brian"></div>
+					</div>
 					Brian Moakley
 				</a>
 				<a href="https://www.raywenderlich.com/u/csweigart" target="_blank">
-					<div><img src="img/team/christine.jpeg" alt="christine"></div>
+					<div class="rounded">
+						<div class="animZoom"><img src="img/team/christine.jpeg" alt="christine"></div>
+					</div>
 					Christine Sweigart
 				</a>
 				<a href="https://twitter.com/billmurray" target="_blank">
-					<div><img src="img/team/bill.png" alt="bill"></div>
+					<div class="rounded">
+						<div class="animZoom"><img src="img/team/bill.png" alt="bill"></div>
+					</div>
 					Bill Murray
 				</a>
 			</nav>
