Small style fix for hero

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 	<footer>
 		<div class="wrap">
 			<div id="columns">
-				<div class="col" id="colLogo"><img src="img/footer-logo.png" alt="Razeware"></div>
+				<div class="col" id="colLogo"><a data-scroll href="#top"><img src="img/footer-logo.png" alt="Razeware"></a></div>
 				<div class="col" id="colNav">
 					<h3>Navigation</h3>
 					<nav class="navList">
@@ -189,8 +189,8 @@
 			</div>
 			<form id="formContact" action="">
 				<h3>Reach Out</h3>
-				<input type="text" id="name" name="name" placeholder="Your Name">
-				<textarea name="message" id="message" cols="30" rows="5" placeholder="Your Message..."></textarea>
+				<input type="text" id="name" name="name" placeholder="Your Name" required>
+				<textarea name="message" id="message" cols="30" rows="5" placeholder="Your Message..." required></textarea>
 				<button class="btnLineWhite">Submit</button>
 			</form>
 		</div>
