Usability and mobile improvements

--- a/index.html
+++ b/index.html
@@ -65,36 +65,36 @@
 		</div>
 		<div id="cells">
 			<div class="cell">
-				<div id="tutorials" class="cellInner">
+				<a href="https://www.raywenderlich.com/video-tutorials" id="tutorials" class="cellInner">
 					<div class="animZoom"><img src="img/service-tutorials.png" alt="Tutorials"></div>
 					<h2>Tutorials</h2>
-					<p>Browse over 1,200 high quality written tutorials, including an extensive catalog for learning iOS developement.</p>
-					<a href="https://www.raywenderlich.com/" class="button">View Now</a>
-				</div>
+					<p>Browse over 1,200 high quality tutorials, including an extensive catalog for learning iOS developement.</p>
+					<span class="button">View Now</span>
+				</a>
 			</div>
 			<div class="cell">
-				<div id="videos" class="cellInner">
+				<a href="https://www.raywenderlich.com/video-tutorials" id="videos" class="cellInner">
 					<div class="animZoom"><img src="img/service-videos.png" alt="Videos"></div>
 					<h2>Videos</h2>
 					<p>Prefer to watch and learn? Check out any of our 500+ videos, across more than 50 video tutorials series.</p>
-					<a href="https://www.raywenderlich.com/video-tutorials" class="button">View Now</a>
-				</div>
+					<span class="button">View Now</span>
+				</a>
 			</div>
 			<div class="cell">
-				<div id="books" class="cellInner">
+				<a href="https://www.raywenderlich.com/store" id="books" class="cellInner">
 					<div class="animZoom"><img src="img/service-books.png" alt="Books"></div>
 					<h2>Books</h2>
 					<p>Learn how to make awesome apps from the ground up, with our published series of epic-length books!</p>
-					<a href="https://www.raywenderlich.com/store" class="button">View Now</a>
-				</div>
+					<span class="button">View Now</span>
+				</a>
 			</div>
 			<div class="cell">
-				<div id="podcasts" class="cellInner">
+				<a href="https://www.raywenderlich.com/rwpodcast" id="podcasts" class="cellInner">
 					<div class="animZoom"><img src="img/service-podcasts.png" alt="Podcasts"></div>
 					<h2>Podcasts</h2>
 					<p>Join Mic and Jake as they discuss aspects of app dev with well-known characters from the community.</p>
-					<a href="https://www.raywenderlich.com/rwpodcast" class="button">View Now</a>
-				</div>
+					<span class="button">View Now</span>
+				</a>
 			</div>
 		</div>
 
